# directx-chili-study

./: .gitignore  CMakeLists.txt  README.md
InitialTest/: CMakeLists.txt  main.cpp
Ongoing/: App.hpp  CMakeLists.txt  ChiliWindow.hpp  Graphics.cpp  Graphics.hpp  Keyboard.hpp  Mouse.hpp  MsgHandlers.hpp  main.cpp
Ongoing/include/: App.hpp  Bindable.hpp  Box.hpp  Buffer.hpp  ChiliWindow.hpp  DrawComponent.hpp  DrawContext.hpp  Entity.hpp  GFXSwapChain.hpp  Game.hpp  Graphics.hpp  GraphicsException.hpp  GraphicsNamespaces.hpp  GraphicsStorage.hpp  IA.hpp  InputComponent.hpp  InputSystem.hpp  Keyboard.hpp  MsgHandlers.hpp  Pipeline.hpp  RenderDesc.hpp  RenderTarget.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Topology.hpp  Viewport.hpp
Ongoing/include/App/: App.hpp  ChiliWindow.hpp  Keyboard.hpp  Mouse.hpp  MsgHandlers.hpp
Ongoing/include/GFX/Core/: CMDLogger.hpp  Exception.hpp  Factory.hpp  GFXFactory.hpp  GFXSwapChain.hpp  Graphics.hpp  GraphicsException.hpp  GraphicsNamespaces.hpp  GraphicsStorage.hpp  Pipeline.hpp  Storage.hpp  SwapChain.hpp  Transform.hpp
Ongoing/include/GFX/PipelineObjects/: Bindable.hpp  Buffer.hpp  DrawCaller.hpp  DrawContext.hpp  IA.hpp  PipelineObject.hpp  RenderTarget.hpp  Sampler.hpp  Shader.hpp  Texture.hpp  Topology.hpp  Viewport.hpp
Ongoing/include/GFX/Primitives/: Cone.hpp  Cube.hpp  Plane.hpp  Prism.hpp  Sphere.hpp
Ongoing/include/GFX/Scenery/: CMDLogFileView.hpp  CMDLogGUIView.hpp  CMDSummarizer.hpp  Camera.hpp  DrawComponent.hpp  PointLight.hpp  RCDrawComponent.hpp  RenderObjectDesc.hpp  Renderer.hpp  RendererDesc.hpp  RendererSystem.hpp  Scene.hpp  SolidMaterial.hpp  TransformCBuffer.hpp  TransformDrawContexts.hpp
Ongoing/include/Game/: Box.hpp  Camera.hpp  CameraControl.hpp  Chrono.hpp  Cone.hpp  CoordSystem.hpp  DrawComponent.hpp  Entity.hpp  GFXCMDLogFileView.hpp  GFXCMDLogGUIView.hpp  GFXCMDLogger.hpp  GFXCMDSummarizer.hpp  GTransformComponent.hpp  Game.hpp  IlluminatedBox.hpp  InputComponent.hpp  InputSystem.hpp  Plane.hpp  PointLight.hpp  PointLightControl.hpp  PrimitiveEntity.hpp  Prism.hpp  RCDrawComponent.hpp  RenderDesc.hpp  RenderObjectDesc.hpp  Renderer.hpp  RendererDesc.hpp  RendererSystem.hpp  Scene.hpp  Sheet.hpp  SimulationUI.hpp  SkinnedBox.hpp  SolidMaterial.hpp  Sphere.hpp  Transform.hpp  TransformCBuffer.hpp  TransformDrawContexts.hpp
Ongoing/include/Image/: GDIPlusMgr.hpp  Surface.hpp
Ongoing/include/UI/: ImguiMgr.hpp
Ongoing/shader/: PixelShader.hlsl  PixelShaderBPhong.hlsl  PixelShaderIndexed.hlsl  PixelShaderSolid.hlsl  PixelShaderTextured.hlsl  ShaderPath.h  ShaderPath.h.in  VertexShader.hlsl  VertexShaderBPhong.hlsl  VertexShaderBlended.hlsl  VertexShaderIndexed.hlsl  VertexShaderTextured.hlsl
Ongoing/src/: ChiliWindow.cpp  DrawContext.cpp  GraphicsException.cpp  main.cpp
Ongoing/src/App/: App.cpp  ChiliWindow.cpp  Keyboard.cpp  MsgHandlers.cpp
Ongoing/src/GFX/Core/: CMDLogger.cpp  Exception.cpp  GFXSwapChain.cpp  Graphics.cpp  GraphicsException.cpp  GraphicsStorage.cpp  Storage.cpp  SwapChain.cpp
Ongoing/src/GFX/PipelineObjects/: Buffer.cpp  DrawCaller.cpp  DrawContext.cpp  RenderTarget.cpp  Sampler.cpp  Shader.cpp  Texture.cpp
Ongoing/src/GFX/Scenery/: CMDLogFileView.cpp  CMDLogGUIView.cpp  CMDSummarizer.cpp  Camera.cpp  PointLight.cpp  Renderer.cpp  SolidMaterial.cpp  TransformCBuffer.cpp  TransformDrawContexts.cpp
Ongoing/src/Game/: Box.cpp  Camera.cpp  CameraControl.cpp  CoordSystem.cpp  GFXCMDLogFileView.cpp  GFXCMDLogGUIView.cpp  GFXCMDLogger.cpp  GFXCMDSummarizer.cpp  GTransformComponent.cpp  Game.cpp  IlluminatedBox.cpp  InputSystem.cpp  PointLight.cpp  PointLightControl.cpp  PrimitiveEntity.cpp  Renderer.cpp  RendererSystem.cpp  SimulationUI.cpp  SolidMaterial.cpp  TransformCBuffer.cpp  TransformDrawContexts.cpp
Ongoing/src/Image/: GDIPlusMgr.cpp  Surface.cpp
Ongoing/src/UI/: ImguiMgr.cpp
Test/: CMakeLists.txt
Utility/: AdditionalConcepts.hpp  AdditionalRanges.hpp  Bit.hpp  CMakeLists.txt  EnumUtil.hpp  GenIterateCall.cpp  GenIterateCall.hpp  GenIterateCallMain.cpp  GenNumArgs.cpp  GenNumArgs.hpp  GenNumArgsMain.cpp  GenOneHotEncode.cpp  GenOneHotEncode.hpp  GenOneHotEncodeMain.cpp  Generator.hpp  Invocable.hpp  IterateCall.hpp  Literal.hpp  NumArgs.hpp  OneHotEncode.hpp  Pointers.hpp  Quote.hpp  SampleEnumUtil.cpp  SampleInvocable.cpp  SampleIterateCall.cpp  SampleNumArgs.cpp  SampleOneHotEncode.cpp  StringLike.hpp  Timer.hpp  Woon2Exception.cpp  Woon2Exception.hpp
Utility/clp/: CMakeLists.txt  gclp.hpp
Win/: CMakeLists.txt  Keyboard.cpp  Keyboard.hpp  KeyboardTest.cpp  KeyboardTestWindow.cpp  KeyboardTestWindow.hpp  Window.cpp  Window.hpp  Window.inl  WindowBase.cpp  WindowBase.hpp  WindowBase.inl  WindowBasexx.cpp  WindowBasexx.hpp  WindowBasexx.inl  WindowsMessageMap.cpp  WindowsMessageMap.hpp  Woon2Exception.cpp  Woon2Exception.hpp  macros.hpp  main.cpp  mainxx.cpp
cmake/: common_configuration.cmake  find_hlsl_compiler.cmake  gitlog.cmake  imgui-config-debug.cmake  imgui-config-release.cmake  imgui-config.cmake  link_resource.cmake  win32app_configuration.cmake
resource/: CMakeLists.txt  resource.hpp  resource.hpp.in
